 + TW-261 Easy to create "not deletable" task (thanks to Jan Kunder).
 + TW-278 Cygwin throws warnings building mk_wcwidth() in wcwidth6.c.
 + TW-1274 Map 'modification' attribute to 'modified' (thanks to jck).
 + TW-1282 incorrect URLs in man task-sync (thanks to Jeremiah Marks).
 + TW-1288 Added missing locking for task modifications (thanks to Kosta H,
 + TW-1321 Unit test view.t fails oddly on Ubuntu 13.10 (thanks to John West).
 + #1511 sync init crashes if client certification file is empty or invalid
         (thanks to Marton Suranyi).
 + #1473 Make TASK_RCDIR customizable (thanks to Elias Probst).
 + #1486 Truncated sentence in task-sync(5) manpage (thanks to Jakub Wilk).
 + #1487 `tasksh` segmentation fault (thanks to Hector Arciga).
 + Added certificate verification to GnuTLS versions < 2.9.10 (thanks to
   Alexander Sulfrian)
 + Removed debugging code.

------ current release ---------------------------

2.3.0 (2014-01-15) c4eb46507031b7dee839dcb932bb2a22b2f0d3a2

Features
 + #328 Replaced the 'shell' command with a standalone 'tasksh' binary, which
   includes GNU readline support (thanks to Haitham Gad).
 + #934 support for 'reserved.lines' to accommodate multi-line
   shell prompts when used in conjunction with 'limit:page' (thanks to Robert
   Gill).
 + #1226 A new French translation has begun, and will continue to be a work in
   progress for a while (thanks to YBSA R).
 + #1227 A new 'verify_l10n' utility ensures the localizations are in sync
   (thanks to Wim Schuermann).
 + #1250 Support out-of-tree test runs (thanks to Jakub Wilk).
 + #1256 Supports default values for UDA fields (thanks to Thomas Sullivan).
 + #1297 The task₋sync(5) man pages is rewritten with examples.
 + #1339 The configuration file now supports JSON encoding of Unicode
   characters, by specifying \uNNNN.
 + #1385 Need a way to configure the trust of self-signed certificates.
 + #1423 sync vs. push, pull, merge collision avoidance.