@@ -201,3 +201,7 @@ suggestions:
   jck
   Michele Vetturi
   Jeremiah Marks
+  Profpatsch
+  Bernd Humpa
+  darkfeline
+  Onion
