@@ -8,6 +8,8 @@
  + TW-1274 Map 'modification' attribute to 'modified' (thanks to jck).
  + TW-1282 incorrect URLs in man task-sync (thanks to Jeremiah Marks).
  + TW-1288 Added missing locking for task modifications (thanks to Kosta H,
+ + TW-1318 creating a UDA in the wrong sequence will cripple taskwarrior (thanks
+           to Onion).
  + TW-1321 Unit test view.t fails oddly on Ubuntu 13.10 (thanks to John West).
  + #1511 sync init crashes if client certification file is empty or invalid
          (thanks to Marton Suranyi).
